# admin/systemmenu/schema.go
@@ -3,31 +3,31 @@ package systemmenu
 type (
 	// ReqSystemMenuCreate 创建菜单数据
 	ReqSystemMenuCreate struct {
-		ParentID  uint64 `json:"parent_id" binding:"required,gte=0"` // 父ID
-		Name      string `json:"name" binding:"required"`            // 菜单名称
-		Kind      string `json:"kind" binding:"required"`            // 菜单类别
-		Icon      string `json:"icon"`                               // 菜单图标
-		Sort      uint16 `json:"sort"`                               // 菜单排序
-		AuthTag   string `json:"auth_tag"`                           // 权限标识
-		Route     string `json:"route"`                              // 路由地址
-		Component string `json:"component"`                          // 前端组件
-		Params    string `json:"params"`                             // 路由参数
-		Status    string `json:"status"`                             // 状态: disable=停用, enable=启用
+		ParentID  uint64 `json:"parent_id" binding:"gte=0"` // 父ID
+		Name      string `json:"name" binding:"required"`   // 菜单名称
+		Kind      string `json:"kind" binding:"required"`   // 菜单类别
+		Icon      string `json:"icon"`                      // 菜单图标
+		Sort      uint16 `json:"sort"`                      // 菜单排序
+		AuthTag   string `json:"auth_tag"`                  // 权限标识
+		Route     string `json:"route"`                     // 路由地址
+		Component string `json:"component"`                 // 前端组件
+		Params    string `json:"params"`                    // 路由参数
+		Status    string `json:"status"`                    // 状态: disable=停用, enable=启用
 	}
 
 	// ReqSystemMenuUpdate 更新菜单数据
 	ReqSystemMenuUpdate struct {
-		ID        uint64 `json:"id" binding:"required,gte=0"`        // 菜单ID
-		ParentID  uint64 `json:"parent_id" binding:"required,gte=0"` // 父ID
-		Name      string `json:"name" binding:"required"`            // 菜单名称
-		Kind      string `json:"kind" binding:"required"`            // 菜单类别
-		Icon      string `json:"icon"`                               // 菜单图标
-		Sort      uint16 `json:"sort"`                               // 菜单排序
-		AuthTag   string `json:"auth_tag"`                           // 权限标识
-		Route     string `json:"route"`                              // 路由地址
-		Component string `json:"component"`                          // 前端组件
-		Params    string `json:"params"`                             // 路由参数
-		Status    string `json:"status"`                             // 状态: disable=停用, enable=启用
+		ID        uint64 `json:"id" binding:"required,gte=0"` // 菜单ID
+		ParentID  uint64 `json:"parent_id" binding:"gte=0"`   // 父ID
+		Name      string `json:"name" binding:"required"`     // 菜单名称
+		Kind      string `json:"kind" binding:"required"`     // 菜单类别
+		Icon      string `json:"icon"`                        // 菜单图标
+		Sort      uint16 `json:"sort"`                        // 菜单排序
+		AuthTag   string `json:"auth_tag"`                    // 权限标识
+		Route     string `json:"route"`                       // 路由地址
+		Component string `json:"component"`                   // 前端组件
+		Params    string `json:"params"`                      // 路由参数
+		Status    string `json:"status"`                      // 状态: disable=停用, enable=启用
 	}
 
 	// ReqSystemMenuId 菜单ID
